package edu.fiuba.algo3.modelo.Contruccion;

import edu.fiuba.algo3.modelo.Color;

public interface Construccion {


    String getColor();
    Color getColorActual();

}
